--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <img src="image/download.svg" class="logo" alt="">
     </div>
-    <div class="container">
+    <div class="container" id="container_en">
         <div class="title">
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="33" viewBox="0 0 36 33">
                 <g fill-rule="evenodd">
@@ -44,11 +44,11 @@
                 </div>
             </div>
             <div class="setion2">
-                <a data-link="stores" href="">Get it from App Store / Google Play</a>
+                <a data-link="stores" id="showPoupe" href="#">Get it from App Store / Google Play</a>
             </div>
             <div class="faded">iOS / Android</div>
             <div class="setion2">
-                <a data-link="apk" href="">Download APK</a>
+                <a data-link="apk" id="showPoupeAPK" href="#">Download APK</a>
             </div>
             <div class="faded">Android</div>
             <div class="setion3">
@@ -81,16 +81,36 @@
               </div>
         </div>
     </div>
+     <div class="popup" data-popup="qr_store_en">
+        <div class="popup_title">
+            Install Exness Mobile App
+        </div>
+        <div class="popup_content">
+            Download and install Exness Mobile App by scanning the QR code below with a QR app installed on your mobile device.
+          </div>
+          <div class="qr_store"></div>
+          <div class="popup_close" onclick="window.closePopup('qr_store_en')">
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
+              <g transform="translate(-2 -3)">
+                <path d="M11.5 10.586L4.075 3.16 2.661 4.575 10.086 12 2.66 19.425l1.414 1.414 7.425-7.425 7.425 7.425 1.414-1.414L12.914 12l7.425-7.425-1.414-1.414-7.425 7.425z"></path>
+              </g>
+            </svg>
+          </div>
+     </div>
+     <div data-popup="clipboard_en" class="popup">
+        <div class="popup_content">
+          Copied to clipboard
+        </div>
+  
+        <div class="popup_close" onclick="window.closePopup('clipboard_en')">
+          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
+            <g transform="translate(-2 -3)">
+              <path d="M11.5 10.586L4.075 3.16 2.661 4.575 10.086 12 2.66 19.425l1.414 1.414 7.425-7.425 7.425 7.425 1.414-1.414L12.914 12l7.425-7.425-1.414-1.414-7.425 7.425z"></path>
+            </g>
+          </svg>
+        </div>
+      </div>
+    <script src="js/main.js"></script>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
-
 </html>
